--- a/src/style/components/_modal.sass
+++ b/src/style/components/_modal.sass
@@ -25,7 +25,12 @@
     justify-content: space-between
     align-content: center
     align-items: center
-    margin-bottom: 30px
+    margin-bottom: 33px
+
+.modal-header-left
+    display: flex
+    flex-direction: column
+    gap: 8px
 
 .modal-title
     font-family: Helvetica Neue
@@ -34,13 +39,20 @@
     line-height: 100%
     letter-spacing: 0%
 
+.modal-date-container
+    display: flex
+    flex-direction: row
+    align-items: center
+    align-content: center
+    gap: 6px
+
 .modal-date
     font-family: Helvetica Neue
     font-weight: 500
     font-size: 13px
     color: rgba(0, 0, 0, 0.4)
 
-.modal-header-left
+.modal-header-right
     display: flex
     flex-direction: row
     gap: 10px
@@ -72,6 +84,7 @@
     height: 70vh
     border-radius: 20px
     overflow: hidden
+    margin-bottom: 8px
 
 .modal-container-image-main
     width: 100% 
@@ -85,7 +98,6 @@
     align-items: center
     height: 60px
     width: 100%
-    margin-top: 8px
 
 .thumbnail-button
     border: none
