--- a/src/style/components/_postList.sass
+++ b/src/style/components/_postList.sass
@@ -37,6 +37,7 @@
         opacity: 0.5
 
 .pagination-button-icon
+    background-color: transparent
     font-size: 16px
     color: rgba(0, 0, 0, 0.7)
 
@@ -52,7 +53,7 @@
     align-items: center
     margin-bottom: 12px
 
-.post-header-right
+.post-header-left
     display: flex
     flex-direction: row
     gap: 10px
@@ -73,13 +74,13 @@
     font-size: 11px
     color: rgba(0, 0, 0, 0.4)
 
-.post-header-left
+.post-header-right
     width: 30px
     height: 30px
-    border: 1px solid rgba(242, 242, 242, 1)
+    border: 1px solid rgba(235, 235, 235, 1)
     border-radius: 50%
     padding: 8px
-    background-color: #FFFFFF
+    background-color: transparent
     display: flex
     justify-content: center
     align-items: center
