--- a/src/style/components/_modal.sass
+++ b/src/style/components/_modal.sass
@@ -85,11 +85,13 @@
     border-radius: 20px
     overflow: hidden
     margin-bottom: 8px
+    max-height: 612px
 
 .modal-container-image-main
     width: 100% 
     object-fit: cover
     border-radius: 23px
+    max-height: 612px
 
 .image-thumbnails
     display: flex
